--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,79 +9,81 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.4",
-    "@clerk/themes": "^1.7.9",
-    "@hookform/resolvers": "^3.3.2",
-    "@mdx-js/loader": "^3.0.0",
-    "@mdx-js/react": "^3.0.0",
-    "@next/mdx": "^14.1.0",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@clerk/nextjs": "^4.31.3",
+    "@clerk/themes": "^1.7.17",
+    "@hookform/resolvers": "^3.9.0",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.5",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@repo/ui": "workspace:*",
-    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^2.4.0",
     "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/mdx": "^2.0.10",
+    "@tailwindcss/typography": "^0.5.13",
+    "@thetalabs/theta-js": "^0.0.86",
+    "@types/mdx": "^2.0.13",
     "@uidotdev/usehooks": "^2.4.1",
-    "@vercel/analytics": "^1.1.1",
-    "autoprefixer": "^10.4.16",
+    "@vercel/analytics": "^1.3.1",
+    "autoprefixer": "^10.4.19",
     "cheerio": "1.0.0-rc.12",
-    "classnames": "^2.3.2",
-    "clsx": "^2.0.0",
-    "convex": "^1.8.0",
-    "date-fns": "^3.0.6",
+    "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
+    "convex": "^1.13.2",
+    "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "8.0.0-rc19",
-    "framer-motion": "^10.16.16",
-    "i18next": "^23.7.16",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-http-backend": "^2.4.2",
+    "ethers": "^6.13.1",
+    "framer-motion": "^10.18.0",
+    "i18next": "^23.12.2",
+    "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-http-backend": "^2.5.2",
     "langchain": "^0.0.210",
     "lucide-react": "^0.298.0",
     "million": "^2.6.4",
     "modern-async": "^1.1.4",
     "ms": "^2.1.3",
-    "next": "^14.1.0",
+    "next": "^14.2.5",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
-    "openai": "^4.24.0",
-    "postcss": "^8.4.32",
-    "posthog-js": "^1.101.0",
-    "random-words": "^2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2",
-    "react-i18next": "^14.0.0",
+    "openai": "^4.52.7",
+    "postcss": "^8.4.39",
+    "posthog-js": "^1.148.0",
+    "random-words": "^2.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
+    "react-i18next": "^14.1.3",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
-    "sonner": "^1.2.4",
-    "stripe": "^14.10.0",
-    "tailwind-merge": "^2.1.0",
+    "sonner": "^1.5.0",
+    "stripe": "^14.25.0",
+    "tailwind-merge": "^2.4.0",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.6",
     "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^10.0.0",
-    "zod": "^3.22.4",
-    "zustand": "^4.5.0"
+    "use-debounce": "^10.0.1",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@aws-sdk/client-s3": "^3.501.0",
-    "@aws-sdk/s3-request-presigner": "^3.501.0",
-    "@next/eslint-plugin-next": "^14.0.2",
+    "@aws-sdk/client-s3": "^3.616.0",
+    "@aws-sdk/s3-request-presigner": "^3.616.0",
+    "@next/eslint-plugin-next": "^14.2.5",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@types/eslint": "^8.44.7",
+    "@types/eslint": "^8.56.10",
     "@types/ms": "^0.7.34",
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "deepl-node": "^1.11.0",
-    "eslint": "^8.53.0",
+    "@types/node": "^17.0.45",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "deepl-node": "^1.13.0",
+    "eslint": "^8.57.0",
     "node-fetch": "^3.3.2",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.10",
-    "replicate": "^0.25.2",
-    "typescript": "^5.2.2"
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "replicate": "^0.18.1",
+    "typescript": "^5.5.3"
   }
 }
