--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.1.1",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.7.2",
     "cheerio": "1.0.0-rc.12",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
@@ -35,6 +36,7 @@
     "i18next": "^23.7.16",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
+    "jsdom": "^24.1.1",
     "langchain": "^0.0.210",
     "lucide-react": "^0.298.0",
     "million": "^2.6.4",
