--- a/.env.local.example
+++ b/.env.local.example
@@ -6,3 +6,10 @@ PERPLEXITY_API_KEY=""
 FIREWORKS_API_KEY=""
 STABILITY_API_KEY=""
 MISTRAL_API_KEY=""
+CONVEX_DEPLOYMENT=""
+CLERK_JWT_ISSUER_DOMAIN=""
+STRIPE_API_KEY=""
+STRIPE_WEBHOOKS_SECRET=""
+NEXT_PUBLIC_THETA_CHAIN_ID=""
+NEXT_PUBLIC_THETA_RPC_URL=""
+NEXT_PUBLIC_THETA_RECEIVER_ADDRESS=""
